--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ concurrency:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
-      - name Add Storybook
+      - name: Add Storybook
         run: npm run build-storybook -- -o dist/storybook
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
